Adjust css to ensure the navbar is not covering the heading section

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,31 +1,35 @@
-/* importing Inter and Macodo Google Fonts */
-@import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&family=Macondo&display=swap');
-/* CSS Varibles */
-:root {
-    --primary-font: "Inter", sans serif;
-    --secondary-font: "Macondo", cursive;
-    --primary-color: #3a2620;  /* Dark brown */
-    --secondary-color:#aa9581; /* Light brown */
-    --highlight-color:#416a8e; /* blue */
-    --light-highlight-color:#7a9fc2; /* light blue */
- 
- 
-    /*Global styles  */
 
+/* Google fonts import */
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&family=Macondo&display=swap');
+
+/* CSS Variables */
+:root {
+    --primary-font: "Inter", sans-serif;
+    --secondary-font: "Macondo", cursive;
+    --primary-color: #3a2620; /* dark brown */
+    --secondary-color: #aa9581; /* light brown */
+    --highlight-color: #416a8e; /* blue */
+    --highlight-color-light: #7a9fc2; /* light blue */
 }
+
+/* Global styles */
+
 body {
     font-family: var(--primary-font);
+    padding-top: 57.15px; /* pushes the top of the header down under fixed navbar */
 }
 
-h1, h2, h3 {
+h1,
+h2,
+h3 {
     font-family: var(--secondary-font);
     color: var(--primary-color);
-    
 }
 
-h1, h2 {
+h1,
+h2 {
     text-transform: uppercase;
-} 
+}
 
 h2 {
     margin-bottom: 2rem;
@@ -36,8 +40,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+    padding-top: 4rem; /* prevent navbar overlap */
 }
 
 /* Buttons */
@@ -65,16 +68,18 @@ h2 {
     color: white
 }
 
-/* Navbar Section */
+/* Navbar */
+
 #navbar {
-   background-color: var(--primary-color);
+    background-color: var(--primary-color);
 }
 
-#navbar .logo{
+#navbar .logo {
     width: 30px;
 }
 
 /* Header */
+
 #header .lead {
     font-family: var(--secondary-font);
 }
@@ -91,6 +96,26 @@ h2 {
     margin-bottom: 1.5rem;
 }
 
+/* Events */
+
+#events .table {
+    /* events table font size small enough that 
+      the table doesn't overflow on xs screens. 
+      Size set back to 1rem in a media query 
+      for sm screens and up */
+    font-size: 0.7rem;
+}
+
+.student-discount {
+    background-color: var(--highlight-color);
+    font-weight: bold;
+    color: white;
+    display: block;
+    max-width: 300px;
+    margin: auto;
+    padding: 5px 10px;
+    font-size: 0.8rem;
+}
 /* Game library cards */
 
 #new-games .card,
@@ -111,10 +136,8 @@ h2 {
 }
 
 #contact .sub-heading-color {
-    color: var(--light-highlight-color);
+    color: var(--highlight-color-light);
 }
-
-
 
 #contact i {
     color: var(--secondary-color);
@@ -123,8 +146,9 @@ h2 {
 }
 
 #contact .social-links i {
-    color: var(--light-highlight-color);
+    color: var(--highlight-color-light);
     font-size: 1.9rem;
+    transition: color 0.3s ease-in-out;
 }
 
 #contact .social-links i:hover {
@@ -132,44 +156,61 @@ h2 {
 }
 
 #contact .table-dark * {
-    background-color: transparent ;
+    background-color: transparent;
 }
 
-/* .container, .row{
-    border: solid 2px black;
-   
+/* grid visualisation CSS for testing */
+
+/* .container,
+.row {
+    border: 2px solid black;
 }
+
 .col-12 {
     border: 2px solid white;
     background-color: lightgray;
 } */
 
-/* Medium devices (tables, 768px and up) */
+/* Media queries */
+
+/* Small screens and up */
+@media screen and (min-width: 576px) {
+    /* increase font size in events table when screen size is large enough */
+    #events .table {
+        font-size: 1rem;
+    }
+    .student-discount {
+        font-size: 1rem;
+    }
+}
+
+/* Medium devices (tablets, 768px and up) */
 @media screen and (min-width: 768px) {
-    /* Make all service cards the same height for cosistency */
+    /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: 191px;
     }
 }
-/* Medium devices (tables, 992px and up) */
+
+/* Large devices (small laptops, 992px and up) */
 @media screen and (min-width: 992px) {
-    /* Make all service cards the same height for cosistency */
+    /* Make all service cards the same height for consistency */
     #services .card-body {
         min-height: auto;
     }
 }
 
-/* Medium devices (tables, 1200px and up) */
+/* xl devices (large desktops, 1200px and up) */
 @media screen and (min-width: 1200px) {
-    /* Make all service cards the same height for cosistency */
+    /* make all service cards the same height for consistency */
     #services .card-body {
         min-height: 220px;
     }
 }
 
-/* Medium devices (tables, 1400px and up) */
+/* xxl devices (larger desktops, 1400px and up) */
 @media screen and (min-width: 1400px) {
-    /* Make all service cards the same height for cosistency */
+    /* make all service cards the same height for consistency */
     #services .card-body {
         min-height: 195px;
     }
